[package]
name = "chess"
version = "0.1.0"
authors = ["Lucy <lucyperopero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.*"
ansi_term = "0.12.1"
macroquad = "0.3.3"
egui = "0.12.0"
egui-macroquad = "0.4.0"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"

[profile.dev.package.image]
opt-level = 3
