[package]
name = "chess"
version = "0.1.0"
authors = ["Lucy <lucyperopero@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"
default-run = "chess-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3.3", optional = true }
egui = { version = "0.12.0", optional = true }
egui-macroquad = { version = "0.4.0", optional = true }
futures = { version = "0.3.15", optional = true }

serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"

[profile.dev.package.image]
opt-level = 3

[features]
client = ["macroquad", "egui", "egui-macroquad", "futures"]
cheats = ["client"]

[lib]
name = "chess"
path = "src/chess.rs"

[[bin]]
name = "chess-rs"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "chess-rs-server"
path = "src/server/main.rs"

