[package]
name = "chess-rs-client"
version = "0.1.0"
authors = ["Lucy <lucyperopero@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
chess-rs-core = { path = "../chess-rs-core" }
macroquad = "0.3.6"
egui = "0.13.0"
egui-macroquad = "0.5.0"
futures = "0.3.15"
rodio = "0.12.0"
clipboard = "0.5.0"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
